--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "bcrypt": "^0.8.0",
     "body-parser": "~1.8.x",
     "express": "~4.12.x",
+    "express-jwt": "^0.5.1",
     "express-validator": "^2.10.0",
     "forever": "^0.14.1",
-    "jwt-simple": "^0.2.0",
+    "jsonwebtoken": "^1.3.0",
     "mongoose": "~3.8.x",
     "mongoose-unique-validator": "^0.4.1",
     "morgan": "^1.3.1",
