--- a/.jshintrc
+++ b/.jshintrc
@@ -1,7 +1,7 @@
 {
   "node": true,
   "browser": true,
-  "esnext": true,
+  "esnext": false,
   "bitwise": true,
   "camelcase": false,
   "curly": true,
