--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose": "~3.8.x",
     "mongoose-unique-validator": "^0.4.1",
     "nodemailer": "^1.10.0",
+    "redis": "^2.4.2",
     "request": "~2.36.0",
     "socket.io": "^1.3.x",
     "underscore": "^1.8.3"
