--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-validator": "^2.10.0",
     "forever": "^0.14.1",
     "jsonwebtoken": "^1.3.0",
+    "mongodb": "^2.1.4",
     "mongoose": "~3.8.x",
     "mongoose-unique-validator": "^0.4.1",
     "nodemailer": "^1.10.0",
